# moonshot

./: .gitignore  biome.json  docker-compose.yml  flake.nix  package.json
.github/workflows/: check.yml
apps/desktop/: package.json
apps/desktop/src/: main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/web/src/components/: AllApplications.tsx  ApplicationForm.tsx  Document.tsx
apps/web/src/editor/: labs.ts
infra/pulumi/: Pulumi.yaml  index.ts  package.json
services/api/: Cargo.toml
services/api/migrations/: 0001_create_applications.sql  0002_create_outbox.sql
services/api/src/: main.rs
workers/ai/: package.json  wrangler.toml
workers/ai/src/: index.ts
workers/sync/: Cargo.toml  wrangler.toml
workers/sync/src/: lib.rs
